--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-tensorflow
-tensorflow-hub
-numpy
-librosa
-sounddevice
-pyaudio
-twilio
-geocoder
+streamlit==1.44.1
+tensorflow==2.19.0
+tensorflow-hub==0.16.1
+numpy==1.26.4
+librosa==0.10.2
+sounddevice==0.4.7
+pyaudio==0.2.14
+twilio==9.2.3
+geocoder==1.38.1
